# voxl_engine

./: .gitmodules  CMakeLists.txt  CMakePresets.json  vcpkg.json
applications/: CMakeLists.txt
applications/sandbox/: main.cpp  sandbox.h
voxl/: CMakeLists.txt
voxl/include/: application.h  command_manager.h  dev_console.h  event.h  input.h  keyboard.h  layer.h  layer_stack.h  renderer.h  resource.h  resource_loader.h  resource_manager.h  shader_program.h  timestep.h  utils.h  voxl.h  window.h
voxl/include/gfx/: buffer.h  program.h  render_command.h  render_device.h  render_pass.h  render_pipeline.h  render_types.h  renderer.h
voxl/include/res/: resource.h  shader.h  shader_program.h
voxl/internal/: GLRenderer.h  gl_buffer.h  gl_program.h  gl_render_device.h  gl_render_pipeline.h  gl_renderer.h  sdl_window.h
voxl/interne/: SDL3Window.h
voxl/src/core/: application.cpp  command_manager.cpp  input.cpp  layer_stack.cpp  render_command.cpp  resource_manager.cpp  timestep.cpp
voxl/src/game/: dev_console.cpp
voxl/src/platform/gl/: GLRenderer.cpp  gl_buffer.cpp  gl_program.cpp  gl_render_device.cpp  gl_render_pipeline.cpp  gl_renderer.cpp
voxl/src/platform/sdl/: SDLWindow.cpp  sdl_window.cpp
voxl/src/platform/sdl3/: SDL3Window.cpp
